<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingStart="25dp"
    android:paddingTop="5dp"
    android:paddingEnd="25dp"
    android:scrollbarSize="4dp"
    tools:context="auth.SignUpFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="25dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tec"
                android:textAlignment="textEnd"
                android:textColor="@color/design_default_color_on_secondary"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ommerce"
                android:textColor="?attr/colorSecondary"
                android:textSize="40sp"
                android:textStyle="bold"
                tools:ignore="TextContrastCheck" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:baselineAligned="false"
            android:orientation="horizontal"
            android:weightSum="4">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_name_text_input"
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="2"
                android:hint="@string/first_name"
                android:textColorHint="@color/text_input_hint_color"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperText="*Required"
                app:helperTextTextColor="@color/design_default_color_error"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:inputType="textPersonName"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_up_last_name_text_input"
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:hint="@string/last_name"
                android:textColorHint="@color/text_input_hint_color"
                app:counterEnabled="true"
                app:counterMaxLength="50"
                app:helperText="*Required"
                app:helperTextTextColor="@color/design_default_color_error"
                app:startIconDrawable="@drawable/person">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_up_last_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColorHint="#0277BD"
                    tools:ignore="TextContrastCheck" />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_email_text_input"
            style="@style/OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/email"
            android:textColorHint="@color/text_input_hint_color"
            app:counterEnabled="true"
            app:counterMaxLength="254"
            app:helperText="*Required"
            app:helperTextTextColor="@color/design_default_color_error"
            app:startIconDrawable="@drawable/mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/password_validation"
            android:textColor="@color/text_input_hint_color"
            android:textSize="16sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_passwd_text_input"
            style="@style/OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/password"
            android:textColorHint="@color/text_input_hint_color"
            app:counterEnabled="true"
            app:counterMaxLength="128"
            app:helperText="*Required"
            app:helperTextTextColor="@color/design_default_color_error"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_confirm_passwd_text_input"
            style="@style/OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/confirm_passwd"
            android:textColorHint="@color/text_input_hint_color"
            app:passwordToggleEnabled="true"
            app:startIconDrawable="@drawable/lock">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_confirm_passwd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            style="@style/Dropdown"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/select_city"
            android:textColorHint="@color/text_input_hint_color">

            <AutoCompleteTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_zipcode_text_input"
            style="@style/OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:hint="@string/zip_code"
            android:textColorHint="@color/text_input_hint_color"
            app:counterEnabled="true"
            app:counterMaxLength="16"
            app:startIconDrawable="@drawable/zip_code">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_zip_code"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPostalAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_up_address_text_input"
            style="@style/OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:hint="@string/address"
            android:textColorHint="@color/text_input_hint_color"
            app:counterEnabled="true"
            app:counterMaxLength="128"
            app:startIconDrawable="@drawable/home">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_up_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/register_btn"
            style="@style/MaterialButtonStyle.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/sign_up" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>