<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="25dp"
    android:paddingLeft="25dp"
    android:paddingTop="100dp"
    android:paddingEnd="25dp"
    android:paddingRight="25dp">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="35dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tec"
                android:textAlignment="textEnd"
                android:textColor="@color/material_on_background_emphasis_high_type"
                android:textSize="40sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ommerce"
                android:textColor="@color/primaryColor"
                android:textSize="40sp"
                android:textStyle="bold" />
        </LinearLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/sign_in_email_text_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/OutlinedBox"
            android:hint="@string/email"
            android:textColorHint="@color/text_input_hint_color"
            app:startIconDrawable="@drawable/mail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/sign_in_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:textColorHint="#757575" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/sign_in_password_text_input"
                style="@style/OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                app:passwordToggleEnabled="true"
                android:hint="@string/password"
                android:textColorHint="@color/text_input_hint_color"
                app:startIconDrawable="@drawable/lock">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/sign_in_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:importantForAutofill="no"
                    android:inputType="textPassword"
                    android:textColorHint="#0277BD" />
            </com.google.android.material.textfield.TextInputLayout>

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="161dp"
                android:visibility="invisible" />

        </RelativeLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_in_btn"
            style="@style/MaterialButtonStyle.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/sign_up_btn"
            style="@style/MaterialButtonStyle.Filled"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_up" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</ScrollView>